hphp/test/quick/ctor_param_promotion_trait.php.expectf

Fatal error: Traits or interfaces cannot have parameters with visibility modifiers in %s on line 4
